--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a class="navbar-brand" href="#"
               ><img
                 class="img-fluid d-inline-block align-middle"
-                src="Images/logo-sm.png"
+                src="images/logo-sm.png"
                 alt="logo for the site"
               />
               <div class="d-inline-block mx-0 align-middle">
